--- a/index2.html
+++ b/index2.html
@@ -83,24 +83,25 @@
 
     html,
     body {
-        font-size: 10.5px;
-        line-height: 10.5px;
         margin: 0;
         padding: 0;
+        font-size: 10.5px;
+        line-height: 10.5px;
         letter-spacing: -0.4px;
         font-family: -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
     }
 
     form,
     ul {
-        padding: 0;
         margin: 0;
+        padding: 0;
     }
 
     a,
     a:hover,
     a:visited {
         color: inherit;
+        cursor: pointer;
     }
 
     a {
@@ -112,8 +113,8 @@
     }
 
     .blind {
-        position: absolute;
         clip: rect(0 0 0 0);
+        position: absolute;
         width: 1px;
         height: 1px;
         margin: -1px;
@@ -127,48 +128,48 @@
     .pipe::before {
         content: "";
         display: inline-block;
+        margin: 0 16px;
         width: 1px;
         height: 12px;
-        background-color: var(--color_dot_divider);
-        margin: 0 16px;
         vertical-align: -1px;
+        background-color: var(--color_dot_divider);
     }
 
     aside[id$=ad] {
-        border-radius: 8px;
         margin-bottom: 16px;
+        border-radius: 8px;
     }
 
     section[id^=main] {
+        margin-bottom: 16px;
         box-shadow: 0 0 0 1px #e3e5e8, 0 1px 2px 0 rgba(0, 0, 0, .04);
         border-radius: 8px;
-        margin-bottom: 16px;
     }
 
     html,
     body {
+        margin: auto;
         width: 100%;
         height: 100%;
-        margin: auto;
     }
 
     #wrap {
-        text-align: center;
         min-width: 1340px;
+        text-align: center;
     }
 
     #wrap-center {
-        width: 1280px;
         margin: 0 auto;
+        width: 1280px;
     }
 
     #header {
         position: relative;
-        text-align: left;
+        margin: 0 auto;
+        padding: 70px 0 22px;
         width: 1280px;
         height: 268px;
-        padding: 70px 0 22px;
-        margin: 0 auto;
+        text-align: left;
     }
 
 
@@ -177,14 +178,14 @@
     #header-notice,
     #header-navertalk,
     #header-pay {
-        position: absolute;
         display: block;
+        position: absolute;
         top: 18px;
+        border: none;
         width: 36px;
         height: 36px;
         padding: 10px;
         background: none;
-        border: none;
         cursor: pointer;
     }
 
@@ -702,6 +703,8 @@
     #main-shopping header {
         padding: 18px 20px 17px;
     }
+
+    ,
 
     #main-newsstand-top header a,
     #main-shopping-top header a,
