--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
     html,
     body {
+        width: 100%;
+        height: 100%;
         margin: 0;
         padding: 0;
         font-size: 10.5px;
@@ -92,13 +94,6 @@
     ul {
         margin: 0;
         padding: 0;
-    }
-
-    html,
-    body {
-        margin: auto;
-        width: 100%;
-        height: 100%;
     }
 
     aside[id$=ad] {
@@ -510,18 +505,16 @@
         background-position: -250px -135px;
     }
 
-    #nav li:nth-of-type(10) :hover::before {
+    #nav li:nth-of-type(10) .icon:hover::before {
         content: " ";
         border-radius: 17px;
         background-position: 0px -69px;
         background-repeat: no-repeat;
-        top: -3px;
-        left: -5.0px;
         width: 58px;
         height: 58px;
     }
 
-    #nav li:nth-of-type(10) :hover::after {
+    #nav li:nth-of-type(10) .icon:hover::after {
         content: " ";
         background-size: 434px 414px;
         background-position: -110px -201px;
